--- a/PortfolioAboutMe.html
+++ b/PortfolioAboutMe.html
@@ -172,24 +172,26 @@
             <h2>Relevant Coursework</h2>
             <br>
             <div class="coursework">
-                <p>Python Programming || Computational Neuroscience || Web Development - Front-End and Back-End || Data Communication   
-                <br><br>
-                CodePath iOS Programming || Database Management Systems || Software Engineering: Best Practices || Network Theory and Design
-                <br><br>
-                OOP Data Structures || Algorithms || Machine Learning || Discrete Matematics || QA Testing 
-                <br>
-             </p>
+                <p>Python Programming || Computational Neuroscience || Web Development - Front-End and Back-End || Data
+                    Communication
+                    <br><br>
+                    CodePath iOS Programming || Database Management Systems || Software Engineering: Best Practices ||
+                    Network Theory and Design
+                    <br><br>
+                    OOP Data Structures || Algorithms || Machine Learning || Discrete Matematics || QA Testing
+                    <br>
+                </p>
             </div>
             <hr>
             <!-- certifications -->
             <h2>Certifications</h2>
             <br>
             <div class="certifications">
-                <strong><a href="https://www.coursera.org/account/accomplishments/verify/T2LAW42N8P3C">
-                    Neural Networks and Deep Learning</a></strong>
-                    <br><br>
-                <p>Issued By: <a hre="https://www.coursera.org/learn/neural-networks-deep-learning">
-                    DeepLearning.AI</a></p>
+                <strong><a href="https://www.coursera.org/account/accomplishments/verify/T2LAW42N8P3C" target="_blank">
+                        Neural Networks and Deep Learning</a></strong>
+                <br><br>
+                <p>Issued By: <a hre="https://www.coursera.org/learn/neural-networks-deep-learning" target="_blank">
+                        DeepLearning.AI</a></p>
                 <p>Certification Earned: May 2021</p>
                 <p>Expiration: Does Not Expire</p>
             </div>
@@ -199,11 +201,11 @@
 <!-- footer -->
 <footer>
     <div class="container-fluid text-center">
-        <a href="http://www.linkedin.com/in/sabrina-slattery-803076171">
+        <a href="http://www.linkedin.com/in/sabrina-slattery-803076171" target="_blank">
             <i class="fa fa-linkedin-square w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
-        <a href="http://github.com/sabrinaslattery">
+        <a href="http://github.com/sabrinaslattery" target="_blank">
             <i class="fa fa-github w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
-        <a href="http://www.instagram.com/coderbellabri/">
+        <a href="http://www.instagram.com/coderbellabri/" target="_blank">
             <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a><br><br>
         <p>Created by Sabrina Slattery • Designed Using W3Schools and Bootstrap Templates
             • Last Updated July 19 2021</p>
