--- a/PortfolioContactMe.html
+++ b/PortfolioContactMe.html
@@ -74,9 +74,9 @@
                         </div>
                         <div class="flipbox-back">
                             <h2>
-                                <a href="http://www.instagram.com/coderbellabri/">@coderbellabri</a>
+                                <a href="http://www.instagram.com/coderbellabri/" target="_blank">@coderbellabri</a>
                             </h2>
-                            <a href="http://www.instagram.com/coderbellabri/">
+                            <a href="http://www.instagram.com/coderbellabri/" target="_blank">
                                 <img src="portfolio_images/profile.jpg" alt="instagram profile"></a>
                         </div>
                     </div>
@@ -92,9 +92,10 @@
                         </div>
                         <div class="flipbox-back">
                             <h2>
-                                <a href="http://www.linkedin.com/in/sabrina-slattery-803076171">Sabrina Slattery</a>
+                                <a href="http://www.linkedin.com/in/sabrina-slattery-803076171" target="_blank">Sabrina
+                                    Slattery</a>
                             </h2>
-                            <a href="http://www.linkedin.com/in/sabrina-slattery-803076171">
+                            <a href="http://www.linkedin.com/in/sabrina-slattery-803076171" target="_blank">
                                 <img src="portfolio_images/profile_linkedin.png" alt="linkedin profile"></a>
                         </div>
                     </div>
@@ -110,9 +111,9 @@
                         </div>
                         <div class="flipbox-back">
                             <h2>
-                                <a href="http://github.com/sabrinaslattery">sabrinaslattery</a>
+                                <a href="http://github.com/sabrinaslattery" target="_blank">sabrinaslattery</a>
                             </h2>
-                            <a href="http://github.com/sabrinaslattery">
+                            <a href="http://github.com/sabrinaslattery" target="_blank">
                                 <img src="portfolio_images/profile.jpg" alt="github profile"></a>
                         </div>
                     </div>
@@ -164,11 +165,11 @@
 <!-- footer -->
 <footer>
     <div class="container-fluid text-center">
-        <a href="http://www.linkedin.com/in/sabrina-slattery-803076171">
+        <a href="http://www.linkedin.com/in/sabrina-slattery-803076171" target="_blank">
             <i class="fa fa-linkedin-square w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
-        <a href="http://github.com/sabrinaslattery">
+        <a href="http://github.com/sabrinaslattery" target="_blank">
             <i class="fa fa-github w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
-        <a href="http://www.instagram.com/coderbellabri/">
+        <a href="http://www.instagram.com/coderbellabri/" target="_blank">
             <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a><br><br>
         <p>Created by Sabrina Slattery • Designed Using W3Schools and Bootstrap Templates
             • Last Updated July 19 2021</p>
