--- a/PortfolioPortfolio.html
+++ b/PortfolioPortfolio.html
@@ -82,9 +82,11 @@
                         Project Links<span class="caret"></span></button>
                     <ul class="dropdown-menu">
                         <li class="dropdown-header">Full-Stack Websites</li>
-                        <li><a href="https://sabrinaslattery.github.io/online-portfolio/index.html">Online Portfolio</a>
+                        <li><a href="https://sabrinaslattery.github.io/online-portfolio/index.html"
+                                target="_blank">Online Portfolio</a>
                         </li>
-                        <li><a href="https://github.com/sabrinaslattery/franklin-musicstore">Fraklin Musicstore</a></li>
+                        <li><a href="https://github.com/sabrinaslattery/franklin-musicstore" target="_blank">Fraklin
+                                Musicstore</a></li>
                     </ul>
                 </div><br>
                 <div class="divider note">
@@ -109,9 +111,10 @@
                         Project Links<span class="caret"></span></button>
                     <ul class="dropdown-menu">
                         <li class="dropdown-header">XCode - Swift</li>
-                        <li><a href="https://github.com/sabrinaslattery/senior-project-spring21">OutReach</a></li>
-                        <li><a href="https://github.com/sabrinaslattery/Twitter-alias">Twitter</a></li>
-                        <li><a href="https://github.com/sabrinaslattery/Flix">Flix</a></li>
+                        <li><a href="https://github.com/sabrinaslattery/senior-project-spring21"
+                                target="_blank">OutReach</a></li>
+                        <li><a href="https://github.com/sabrinaslattery/Twitter-alias" target="_blank">Twitter</a></li>
+                        <li><a href="https://github.com/sabrinaslattery/Flix" target="_blank">Flix</a></li>
                     </ul>
                 </div><br>
                 <div class="divider note">
@@ -133,7 +136,8 @@
                     </button>
                     <ul class="dropdown-menu">
                         <li class="dropdown-header">Machine Learning</li>
-                        <li><a href="https://github.com/sabrinaslattery/credit-reliability-prediction">Credit
+                        <li><a href="https://github.com/sabrinaslattery/credit-reliability-prediction"
+                                target="_blank">Credit
                                 Reliability Prediction</a></li>
                     </ul>
                 </div><br>
@@ -158,7 +162,8 @@
                     </button>
                     <ul class="dropdown-menu">
                         <li class="dropdown-header">MiniGames</li>
-                        <li><a href="https://github.com/sabrinaslattery/SliderPuzzle">Slider Puzzle</a></li>
+                        <li><a href="https://github.com/sabrinaslattery/SliderPuzzle" target="_blank">Slider Puzzle</a>
+                        </li>
                         <li> <a>Pet Adventures - Currently No Public Repository</a></li>
                     </ul>
                 </div><br>
@@ -198,11 +203,11 @@
 <!-- footer -->
 <footer>
     <div class="container-fluid text-center portfolio">
-        <a href="http://www.linkedin.com/in/sabrina-slattery-803076171">
+        <a href="http://www.linkedin.com/in/sabrina-slattery-803076171" target="_blank">
             <i class="fa fa-linkedin-square w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
-        <a href="http://github.com/sabrinaslattery">
+        <a href="http://github.com/sabrinaslattery" target="_blank">
             <i class="fa fa-github w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
-        <a href="http://www.instagram.com/coderbellabri/">
+        <a href="http://www.instagram.com/coderbellabri/" target="_blank">
             <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
         <br><br>
         <p>Created by Sabrina Slattery • Designed Using W3Schools and Bootstrap Templates
