--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ To-Do:
     </head>
   
     <body>
+        <!-- nav bar -->
         <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center" >
             <img class="avatar" src="portfolio_images/profile.jpg" alt="profile" style="width:100%;">
             <a href="index.html" class="active w3-bar-item w3-button w3-padding-large">
@@ -119,11 +120,11 @@ To-Do:
 
     <footer>
         <div class="container-fluid text-center">
-            <a href="http://www.linkedin.com/in/sabrina-slattery-803076171">
+            <a href="http://www.linkedin.com/in/sabrina-slattery-803076171" target="_blank">
                 <i class="fa fa-linkedin-square w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
-            <a href="http://github.com/sabrinaslattery">
+            <a href="http://github.com/sabrinaslattery" target="_blank">
                 <i class="fa fa-github w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a>
-            <a href="http://www.instagram.com/coderbellabri/">
+            <a href="http://www.instagram.com/coderbellabri/" target="_blank">
                 <i class="fa fa-instagram w3-hover-opacity w3-xlarge" aria-hidden="true"></i></a><br><br>
                 <p>Created by Sabrina Slattery • Designed Using W3Schools and Bootstrap Templates
                     • Last Updated July 19 2021</p>
