--- a/PortfolioContactMe.html
+++ b/PortfolioContactMe.html
@@ -129,7 +129,7 @@
                 <p>– Let me know if you have any questions or comments. –</p>
                 <!-- contact form -->
                 <div class="row-contact">
-                    <div class="column-contact" style="width:auto;">
+                    <div class="column-contact" style="width:auto">
                         <form id="ContactForm" action="mailto:brinaslattery@gmail.com" method="POST"
                             enctype="multipart/form-data" name="ContactFromPortfolio">
                             <label for="firstName"></label>
@@ -150,8 +150,8 @@
                                 <option class="contact-box" value="phoneC">Phone - Call</option>
                                 <option class="contact-box" value="phoneT">Phone - Text</option>
                             </select><br><br>
-                            <label for="subject">Subject</label>
-                            <textarea id="subject" class="contact-box" name="subject"></textarea><br><br>
+                            <label for="subject">Message</label>
+                            <textarea id="subject" class="contact-box" name="subject" placeholder="Your Message Here..."></textarea><br><br>
                             <input type="submit" id="contact-submit" value="Submit">
                         </form>
                     </div>
