--- a/PortfolioAboutMe.html
+++ b/PortfolioAboutMe.html
@@ -1,7 +1,9 @@
 <!-- To-Do:
 1) Create collapsible animations (fluid motion)
 2) Make work experience into collapsible text
-3) Add coursework?
+3) Organize coursework by sections?
+4) Add images for certifications
+5) More color?
  -->
 
 <!DOCTYPE html>
