--- a/PortfolioContactMe.html
+++ b/PortfolioContactMe.html
@@ -1,4 +1,9 @@
-<!-- mention that the contact section will need more security so that the etc. -->
+<!-- 
+    To-Do:
+    1) secure mail contact 
+        1a) refuse to send if more than 3+ emails within 1 minute from session cookie
+    2) send to database instead of email?
+ -->
 <!DOCTYPE html>
 <html lang>
 
