--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!--
-    This is a website portfolio for Sabrina Slattery (me :) ) displaying software engineering projects, work experience, and allows
+    This is a website portfolio for Sabrina Slattery displaying software engineering projects, work experience, and allows
     users to contact Sabrina via email.
     Website content is divided into four sections: Home, About Me, Portfolio, and Contact Me.
     
     Content is still being developed for view on smaller screens.
 To-Do:
+    !!) Fix rendering issues from MySQL database to webpages 
     1) French version of website, toggled via nav bar toggles
     2) Dark mode?
 -->
